--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "tinycas",
-  "version": "0.8.1",
+  "version": "0.8.5",
   "description": "A Simple CAS",
   "keywords": [
     "cas",
     "math"
   ],
-  "type":"module",
-  "main": "src/index.mjs",
+  "module": "./dist/tinycas.mjs",
   "author": "Zahara-Nour",
   "repository": "github:Zahara-Nour/tinycas",
   "scripts": {
     "build": "babel src -d build",
+    "dist": "rollup -c",
     "test": "jest --coverage --colors",
     "testw": "jest --watch --colors",
     "start": "node src/index.js",
@@ -25,6 +25,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-config-standard": "^14.1.1",
