--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tinycas",
-  "version": "0.8.24",
+  "version": "0.8.27",
   "description": "A Simple CAS",
   "keywords": [
     "cas",
@@ -9,6 +9,10 @@
   "main": "./build/index.js",
   "module": "./dist/tinycas.mjs",
   "type":"module",
+  "exports": {
+    "require": "./build/index.js",
+    "import": "./dist/tinycas.mjs"
+  },
   
   "author": "Zahara-Nour",
   "repository": "github:Zahara-Nour/tinycas",
